[package]
name = "lobars"
version = "0.1.2"
edition = "2021"
authors = ["Nurahmadie <nurahmadie@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-render = "0.2"
yew = "0.22"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
tauri = []
